force-app/main/default/objects/WhitePrice__c/WhitePrice__c.object-meta.xml
<CustomObject>
    <label>White Price</label>
    <nameField>
        <displayFormat>WP-{000000}</displayFormat>
        <label>White Price Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>White Price</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>