force-app/main/default/objects/WhitePrice__c/fields/Match__c.field-meta.xml
<CustomField>
    <fullName>Match__c</fullName>
    <label>Match</label>
    <length>255</length>
    <type>Text</type>
</CustomField>