force-app/main/default/objects/WhitePrice__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>((2 AND 3 AND 4) OR (( NOT (4)) AND 1)) AND 5</booleanFilter>
        <filterItems>
            <field>$User.Sales_Region__c</field>
            <operation>equals</operation>
            <valueField>Product__c.sales_region__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.SalesRegion__c</field>
            <operation>notEqual</operation>
            <value>null</value>
        </filterItems>
        <filterItems>
            <field>$Source.SalesRegion__c</field>
            <operation>equals</operation>
            <valueField>Product__c.sales_region__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filterItems>
        <filterItems>
            <field>Product__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Regional Product</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>White Price</relationshipLabel>
    <relationshipName>White_Price</relationshipName>
    <type>Lookup</type>
</CustomField>