force-app/main/default/objects/WhitePrice__c/fields/ProductSalesRegion__c.field-meta.xml
<CustomField>
    <fullName>ProductSalesRegion__c</fullName>
    <formula>TEXT( Product__r.sales_region__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Sales Region</label>
    <type>Text</type>
</CustomField>